Some suggestions for the cmake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,17 @@
 cmake_minimum_required (VERSION 2.8)
 
 project (gvcfmerge C CXX)
+# We should switch this on later, right now this still leads to compile errors due to some undefined functions in the header
+#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall -Werror")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
+
+if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
+    if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
+        message(FATAL_ERROR "GCC version must be at least 4.7")
+    endif()
+else()
+    message(WARNING "You are using an unsupported compiler.")
+endif()
 
 add_custom_command(
 	OUTPUT  ${PROJECT_SOURCE_DIR}/external/htslib-1.5/libhts.a
