--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,13 @@ if(NOT CMAKE_BUILD_TYPE)
 endif()
 
 project (gvcfgenotyper C CXX)
-# We should switch this on later, right now this still leads to compile errors due to some undefined functions in the header
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread -Wall -Werror")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -pthread")
 
 set(CMAKE_CXX_FLAGS_RELEASE "-O2")
 set(CMAKE_C_FLAGS_RELEASE "-O2")
 
-set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall")
-set(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wall")
+set(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -Wall -Wextra -Werror")
+set(CMAKE_C_FLAGS_DEBUG "-O0 -g -Wall -Wextra -Werror")
 
 if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 4.7)
